# Coin3D

./: .gitignore  NOTES  README.md  coin4.txt  make.txt
coin4/: README  TODO  configure  configure.ac
coin4/docs/: doxypp.sed  dumpnodes.cpp
coin4/examples/bindings/: CoinQtWidget.cpp  CoinQtWidget.h
coin4/examples/dynloadextensions/: SwitchboardOperator.cpp
coin4/examples/misc/: glut_glinfo.cpp  glut_tex.cpp
coin4/include/Inventor/: SbBSPTree.h  SbBox2d.h  SbBox2f.h  SbBox2i32.h  SbBox2s.h  SbBox3d.h  SbBox3f.h  SbBox3i32.h  SbBox3s.h  SbByteBuffer.h  SbByteBufferP.icc  SbClip.h  SbColor4f.h  SbCylinder.h  SbDPLine.h  SbDPMatrix.h  SbDPPlane.h  SbDPRotation.h  SbDPViewVolume.h  SbDict.h  SbHeap.h  SbImage.h  SbLine.h  SbMatrix.h  SbName.h  SbOctTree.h  SbPlane.h  SbRotation.h  SbSphere.h  SbString.h  SbTesselator.h  SbTime.h  SbTypeInfo.h  SbVec.h  SbVec2b.h  SbVec2d.h  SbVec2f.h  SbVec2i32.h  SbVec2s.h  SbVec2ub.h  (+34 more)
coin4/src/: SbBasicP.h  coindefs.h  tidbits.cpp  tidbitsp.h
coin4/src/3ds/: 3dsLoader.cpp  3dsLoader.h  SoStream.cpp  SoStream.h
coin4/src/actions/: SoAction.cpp  SoActionP.h  SoBoxHighlightRenderAction.cpp  SoCallbackAction.cpp  SoGLRenderAction.cpp  SoGetBoundingBoxAction.cpp  SoGetMatrixAction.cpp  SoGetPrimitiveCountAction.cpp  SoHandleEventAction.cpp  SoLineHighlightRenderAction.cpp  SoPickAction.cpp  SoRayPickAction.cpp  SoReorganizeAction.cpp  SoSearchAction.cpp  SoSimplifyAction.cpp  SoToVRML2Action.cpp  SoToVRMLAction.cpp  SoWriteAction.cpp
coin4/src/base/: SbBSPTree.cpp  SbBox2d.cpp  SbBox2f.cpp  SbBox2i32.cpp  SbBox2s.cpp  SbBox3d.cpp  SbBox3f.cpp  SbBox3i32.cpp  SbBox3s.cpp  SbClip.cpp  SbColor4f.cpp  SbCylinder.cpp  SbDPLine.cpp  SbDPMatrix.cpp  SbDPPlane.cpp  SbDPRotation.cpp  SbDPViewVolume.cpp  SbDict.cpp  SbGLUTessellator.cpp  SbGLUTessellator.h  SbHeap.cpp  SbImage.cpp  SbLine.cpp  SbMatrix.cpp  SbName.cpp  SbOctTree.cpp  SbPlane.cpp  SbRotation.cpp  SbSphere.cpp  SbString.cpp  SbTesselator.cpp  SbTime.cpp  SbVec2d.cpp  SbVec2f.cpp  SbVec2s.cpp  SbVec3d.cpp  SbVec3f.cpp  SbVec3s.cpp  SbVec4d.cpp  SbVec4f.cpp  (+16 more)
coin4/src/bundles/: SoMaterialBundle.cpp  SoNormalBundle.cpp  SoTextureCoordinateBundle.cpp  SoVertexAttributeBundle.cpp
coin4/src/caches/: SoBoundingBoxCache.cpp  SoCache.cpp  SoConvexDataCache.cpp  SoGLCacheList.cpp  SoGLRenderCache.cpp  SoGlyphCache.cpp  SoNormalCache.cpp  SoPrimitiveVertexCache.cpp  SoVBOCache.cpp  SoVBOCache.h
coin4/src/collision/: SbTri3f.cpp  SbTri3f.h  SoIntersectionDetectionAction.cpp
coin4/src/details/: SoDetail.cpp  SoNodeKitDetail.cpp
coin4/src/doc/: Coin_main.dox
coin4/src/draggers/: SoCenterballDragger.cpp  SoDirectionalLightDragger.cpp  SoDragPointDragger.cpp  SoDragger.cpp  SoHandleBoxDragger.cpp  SoJackDragger.cpp  SoPointLightDragger.cpp  SoRotateCylindricalDragger.cpp  SoRotateDiscDragger.cpp  SoRotateSphericalDragger.cpp  SoScale1Dragger.cpp  SoScale2Dragger.cpp  SoScale2UniformDragger.cpp  SoScaleUniformDragger.cpp  SoSpotLightDragger.cpp  SoTabBoxDragger.cpp  SoTabPlaneDragger.cpp  SoTrackballDragger.cpp  SoTransformBoxDragger.cpp  SoTransformerDragger.cpp  SoTranslate1Dragger.cpp  SoTranslate2Dragger.cpp
coin4/src/elements/: SoAccumulatedElement.cpp  SoAnnoText3CharOrientElement.cpp  SoAnnoText3FontSizeHintElement.cpp  SoAnnoText3RenderPrintElement.cpp  SoBumpMapCoordinateElement.cpp  SoBumpMapElement.cpp  SoCacheElement.cpp  SoCacheHintElement.cpp  SoClipPlaneElement.cpp  SoComplexityElement.cpp  SoComplexityTypeElement.cpp  SoCoordinateElement.cpp  SoCreaseAngleElement.cpp  SoCullElement.cpp  SoDecimationPercentageElement.cpp  SoDecimationTypeElement.cpp  SoDepthBufferElement.cpp  SoDiffuseColorElement.cpp  SoDrawStyleElement.cpp  SoElement.cpp  SoFloatElement.cpp  SoFocalDistanceElement.cpp  SoFontNameElement.cpp  SoFontSizeElement.cpp  SoInt32Element.cpp  SoLazyElement.cpp  SoLightAttenuationElement.cpp  SoLightElement.cpp  SoLightModelElement.cpp  SoLinePatternElement.cpp  SoLineWidthElement.cpp  SoListenerGainElement.cpp  SoListenerOrientationElement.cpp  SoListenerPositionElement.cpp  SoLocalBBoxMatrixElement.cpp  SoMaterialBindingElement.cpp  SoModelMatrixElement.cpp  SoMultiTextureCoordinateElement.cpp  SoMultiTextureEnabledElement.cpp  SoMultiTextureImageElement.cpp  (+23 more)
coin4/src/engines/: SoBoolOperation.cpp  SoCalculator.cpp  SoConcatenate.cpp  (+20 more)
coin4/testsuite/: TestSuiteMisc.h
emergent/: .gitignore  help.txt  quarter.diff
emergent/quarter/: CMakeLists.junk  CMakeLists.txt  README  README.WIN_2016
emergent/viewer/: CMakeLists.txt
insanity/: .gitignore  coin.txt  err.txt  make.txt  viewer_err.txt  warn.txt
insanity/coin/: Makefile.am  Makefile.in  README.WIN_2016  configure.ac  more_bool.diff  more_nullptr.diff  nullptr.diff
insanity/coin4_build/: Info.plist  Makefile  config.status  libtool  version.plist
insanity/quarter/: CMakeLists.txt  NEWS
insanity/quarter/SIMCMakeMacros/: FindCoin.cmake  help.txt
insanity/quarter/src/Quarter/: CMakeLists.txt  ContextMenu.cpp  DragDropHandler.cpp  InputDevice.cpp  Keyboard.cpp  KeyboardP.cpp  QtCoinCompatibility.cpp  QuarterWidgetP.cpp  SensorManager.cpp  SpaceNavigatorDevice.cpp
insanity/quarter/src/examples/: CMakeLists.txt  MdiMainWindow.h  MdiQuarterWidget.cpp  directui.cpp  examiner.cpp  mdi.cpp  qrc_dynamicui.cpp
insanity/quarter/src/plugins/: CMakeLists.txt  QuarterWidgetPlugin.cpp
insanity/quarter/src/unit-tests/events/: EventTranslation.cpp
insanity/quarter4_build/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h  install_manifest.txt
insanity/viewer/: CMakeLists.txt  viewer.cpp
official/: build.make  coin_build_error.txt  coin_error.txt  coin_warn.txt  help.txt  make.txt
official/coin/: CMakeLists.txt
official/coin_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
official/quarter/: .hgtags  CMakeLists.txt
official/quarter_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  config.h  install_manifest.txt
official/viewer/: CMakeLists.txt  viewer.cpp
quarter4/: CMakeLists.txt
viewer/: CMakeLists.txt
(+22010 files in other folders)
